maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:13: error: ')' expected but '}' found.
    }
    ^Escaper:20: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:34: error: expected class or object definition
def Nord(){
^Escaper:54: error: Unmatched closing brace '}' ignored here
}
^