maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  while(getY>0 && !estSurBiscuit){
    Nord()
  }
  
  while(!estSurBiscuit){
    var angleSom=0
    var meDir=getDirection()
    do{
      angleSom= angleSom + keepHandOnSideWall()
    }while(angleSom !=0 && estSurBiscuit() && getDirection()!= meDir
    }
   
  }
  prendBiscuit()
}


def keepHandOnSideWall(){
  if(estFaceMur){
    droite()
  } else {
    avance()
    gauche()

    if(estFaceMur){
      droite()
    }
  }
}


def Nord(){
  
  if(getDirection == Direction.NORTH && !estFaceMur){
    avance()

  }

  else if (estFaceMur){
    droite()

  } else {
    avance()
    gauche()

    if(estFaceMur){
      droite()
    }
  }
}